fix: Dark mode syntax highlighting

--- a/docs/src/css/themes.scss
+++ b/docs/src/css/themes.scss
@@ -148,7 +148,7 @@ body.dark .astro-code span {
 	color: var(--shiki-dark) !important;
 	background-color: var(--shiki-dark-bg) !important;
 	/* Optional, if you also want font styles */
-	font-style: var(--shiki-dark-font-style) !important;
-	font-weight: var(--shiki-dark-font-weight) !important;
-	text-decoration: var(--shiki-dark-text-decoration) !important;
+	font-style: var(--shiki-dark-font-style) ;
+	font-weight: var(--shiki-dark-font-weight) ;
+	text-decoration: var(--shiki-dark-text-decoration);
 }
